# veracruz

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.markdown  BUILD_INSTRUCTIONS.markdown  CLI_INSTRUCTIONS.markdown  CLI_QUICKSTART.markdown  CMakeLists.txt  COMPONENTS.markdown  CONTRIBUTING.markdown  Cargo.toml  Dockerfile  GETTING_STARTED_CLI.markdown  LICENSE.markdown  LICENSE.md  LICENSE_CC-BY-SA-2.0.markdown  LICENSE_MIT.markdown  Makefile  NETWORK.markdown  NITRO_INSTRUCTIONS.markdown  README.markdown  README.md  TEST_PLAN.markdown  base64.c  base64.h  buildspec.yml  claps_to_header.py  clippy.toml  example-data1-cert.pem  example-policy.json  http.c  http.h  http_test.py  main.c  measure.sh  mexico_city_uuid.txt  policy.c  policy.h  policy.json  (+26 more)
chiapas/: Cargo.toml  Dockerfile  Makefile
chiapas/src/: main.rs
chihuahua/: Cargo.toml
chihuahua/src/: buffer.rs  factory.rs  lib.rs
chihuahua/src/error/: common.rs  mod.rs
chihuahua/src/hcall/: buffer.rs  common.rs  mod.rs  wasmi.rs  wasmtime.rs
durango-cli/: Cargo.toml
durango-cli/src/: main.rs
end-to-end-demo/: .env  Cargo.toml  Makefile  build.rs  populate-test-database.sh
end-to-end-demo/oblivious-routing/: Cargo.toml
end-to-end-demo/oblivious-routing/src/: main.rs
end-to-end-demo/src/: main.rs
end-to-end-demo/test-collateral/: ca-certificate.pem  mapping-service-certificate.pem  mapping-service-key.pem  mapping-user-key.pem  oblivious-routing-policy.json
end-to-end-demo/test-program/: Cargo.toml
end-to-end-demo/test-program/src/: main.rs
execution-engine/: Cargo.toml  README.markdown
execution-engine/src/: factory.rs  fs.rs  lib.rs  native_module_manager.rs  pipeline.rs
execution-engine/src/engines/: common.rs  mod.rs  strace.rs  wasmi.rs  wasmtime.rs
execution-engine/src/error/: common.rs  mod.rs  wasmi.rs
execution-engine/src/hcall/: buffer.rs  common.rs  fs.rs  mod.rs  wasmi.rs  wasmtime.rs
execution-engine/src/native_modules/: aead.rs  aes.rs  aesctr.rs  common.rs  darknet_inference.rs  ml.rs  mod.rs  pinecone.rs  postcard.rs  tflite_inference.rs
execution-engine/src/wasi/: common.rs  mod.rs  strace.rs  wasmi.rs  wasmtime.rs
icecap-runtime-manager/: .gitignore  Cargo.toml
icecap-runtime-manager/src/: fmt.rs  icecap_runtime.rs  main.rs
icecap-veracruz-server/: Cargo.toml
icecap-veracruz-server/.cargo/: config.toml
icecap-veracruz-server/src/: lib.rs  main.rs  server.rs
io-utils/: Cargo.toml
io-utils/src/: error.rs  fd.rs  http.rs  lib.rs  nitro.rs  raw_fd.rs  tcp.rs  vsocket.rs
linux-root-enclave/: Cargo.toml  Makefile
linux-root-enclave/src/: main.rs
linux-runtime-manager/: Cargo.toml
linux-runtime-manager/src/: linux_runtime.rs  main.rs
linux-veracruz-server/: Cargo.toml
linux-veracruz-server/src/: lib.rs  main.rs  server.rs
mexico-city/: .gitignore  Cargo.toml  Dockerfile  Enclave.config.xml  Makefile  Xargo.toml  build.rs  mexico_city.edl  optee.mk
mexico-city/src/: lib.rs  main.rs  mc_nitro.rs  mc_sgx.rs  mc_tz.rs
mexico-city/src/managers/: baja_manager.rs  buffer.rs  chihuahua_manager.rs  error.rs  execution_engine_manager.rs  mod.rs  session_manager.rs
nitro-root-enclave/: Cargo.toml  Dockerfile  Makefile
nitro-root-enclave-server/: Cargo.toml  Makefile
nitro-root-enclave-server/src/: main.rs
nitro-root-enclave/src/: main.rs
nitro-runtime-manager/: Cargo.toml
nitro-runtime-manager/src/: main.rs  nitro_runtime.rs
nitro-veracruz-server/: Cargo.toml
nitro-veracruz-server/src/: main.rs  server.rs
platform-services/: Cargo.toml
platform-services/src/: icecap_platform_services.rs  lib.rs  nitro_platform_services.rs  result.rs  sgx_platform_services.rs  shim.rs  std_platform_services.rs  tz_platform_services.rs
policy-utils/: Cargo.toml  build.rs
policy-utils/src/: error.rs  lib.rs  parsers.rs  pipeline.rs  policy.rs  principal.rs
proxy-attestation-client/: Cargo.toml
proxy-attestation-client/src/: lib.rs
proxy-attestation-server/: .env  .gitignore  CAAttestation.puml  CACert.der  Cargo.toml  build-proxy-attestation-server-optee.sh  build.rs  diesel.toml  get-enclave-hash.sh  populate-test-database.sh
proxy-attestation-server/src/: CAInstructions.markdown  attestation.rs  cli.rs  endCertInstructions.md  error.rs  lib.rs  main.rs  server.rs  test.rs
proxy-attestation-server/src/attestation/: nitro.rs  psa.rs  sgx.rs
proxy-attestation-server/src/orm/: mod.rs  models.rs  schema.rs
psa-attestation/: Cargo.toml  Xargo.toml  build.rs  redefined_symbols
psa-attestation/c_src/: .gitignore  Makefile  attest_token.c  attestation_core.c  psa_attestation.c  sha256.c
psa-attestation/include/internal/: attest_token.h  attestation.h  attestation_key.h
psa-attestation/include/psa/: initial_attestation.h
psa-attestation/src/: lib.rs
runtime-manager/: .gitignore  Cargo.toml  Dockerfile  Makefile  Xargo.toml  build.rs  optee.mk  runtime_manager.edl  stripped_ta
runtime-manager-bind/: Cargo.lock.sgx  Cargo.toml  build.rs  wrapper.h
runtime-manager-bind/src/: lib.rs
runtime-manager/.cargo/: config
runtime-manager/dockerdir/: .gitignore  Dockerfile
runtime-manager/src/: common_runtime.rs  fmt.rs  lib.rs  main.rs  platform_runtime.rs  runtime_manager.rs  runtime_manager_icecap.rs  runtime_manager_linux.rs  runtime_manager_nitro.rs  runtime_manager_sgx.rs  runtime_manager_trustzone.rs  runtime_manager_tz.rs
session-manager/: Cargo.toml  Xargo.toml
session-manager/src/: error.rs  lib.rs  session.rs  session_context.rs
sgx-root-enclave/: .env  .gitignore  Cargo.toml  Makefile  build.rs  sgx_root_enclave.edl
sgx-root-enclave-bind/: Cargo.toml  build.rs  wrapper.h
sgx-root-enclave-bind/src/: lib.rs
sgx-root-enclave/src/: lib.rs  main.rs
sinaloa-cli/: Cargo.toml
sinaloa-cli/src/: main.rs
sinaloa-test/: .gitignore  Cargo.toml  build.rs  build_sinaloa_test_optee.sh  cp_sinaloa_test_tz.sh  nitro-config.sh  nitro-terminate.sh  nitro_config.sh  nitro_console.sh  nitro_ec2_terminate_root.sh  nitro_terminate.sh  populate-test-database.sh  populate_test_database.sh
sinaloa-test/src/: main.rs
(+1146 files in other folders)
