[package]
name = "chiapas"
version = "0.1.0"
authors = ["Derek Miller <derek.miller@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.15"
byteorder = { version = "1.3" }
veracruz-utils = { path = "../veracruz-utils", features = ["nitro"] }
bincode = { git= "https://github.com/veracruz-project/bincode.git", branch= "veracruz", default-features=false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
