[package]
name = "chihuahua"
version = "0.3.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = "WASM execution engine for the trusted Veracruz runtime"

[features]
default = []
# NOTE: Introduce non_sgx in the dependencies to deal with sgx-related modification.
std = ["wasmi/non_sgx", "platform-services/std", "wasmtime", "ring/non_sgx"]
sgx = ["sgx_tstd", "wasmi/mesalock_sgx", "platform-services/sgx", "serde/mesalock_sgx", "typetag/mesalock_sgx", "ring/mesalock_sgx"]
tz = ["platform-services/tz", "wasmi/non_sgx", "ring/non_sgx"]
nitro = ["platform-services/std"]

[dependencies]
byteorder = { git = "https://github.com/veracruz-project/byteorder.git", branch = "veracruz" }
lazy_static = {version = "1.4.0", features=["spin_no_std"] }
platform-services = { path = "../platform-services" }
ring = { git = "https://github.com/veracruz-project/ring.git", branch = "veracruz" }
serde = { git = "https://github.com/veracruz-project/serde.git", features=["derive"], branch = "veracruz" }
typetag = { git = "https://github.com/veracruz-project/typetag.git", branch="veracruz" }
wasmi = { git = "https://github.com/veracruz-project/wasmi.git", branch="veracruz" }
wasmtime = { git = "https://github.com/veracruz-project/wasmtime.git", branch = "veracruz", optional = true }
err-derive = "0.2"
pinecone = "0.2"

[lib]
name = "chihuahua"
path = "./src/lib.rs"

[target.'cfg(target_arch = "x86_64")'.dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[patch.crates-io]
serde = { git = "https://github.com/veracruz-project/serde.git", features=["derive"], branch = "veracruz" }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_alloc = { branch="veracruz", git = 'https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git', optional = true }
