[package]
name = "durango-cli"
version = "0.1.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = """\
    Command-line interface for Durango, \
    the Rust client for Veracruz."""
autobins = false

# this is the only way to change the default binary name
[[bin]]
name = "durango"
path = "src/main.rs"

[dependencies]
veracruz-client = {path = "../veracruz-client"}
veracruz-utils = {path = "../veracruz-utils", features=["std"] }
structopt = { version="0.3", features=["wrap_help"] }
log = "0.4"
env_logger = "0.7"

