[package]
name = "end-to-end-demo"
version = "0.3.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = "A simple end-to-end demo of Veracruz, showing how to develop and deploy a computation with the framework."

[features]
std = ["veracruz-client/sgx","veracruz-server/sgx", "sgx_types", "sgx_ucrypto", "sgx_alloc", "veracruz-utils/std", "proxy-attestation-server/sgx", "transport-protocol/sgx_attestation"]

[dependencies]
anyhow = "1.0.41"
veracruz-client = {path = "../veracruz-client"}
veracruz-server = { path = "../veracruz-server"}
veracruz-utils = { path = "../veracruz-utils", features = ["std"] }
serde_json = "1.0"
serde = { version = "1.0.97", features = ["derive"] }
proxy-attestation-server = { path = "../proxy-attestation-server"}
transport-protocol = { path = "../transport-protocol"}
actix-rt = "1.1.1"
hex = "=0.4.2"
ring = "=0.16.5"
pinecone = "0.2"
env_logger = "0.7"
log = "=0.4.13"
rand = "0.8.4"
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_ucrypto = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_alloc = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_ucrypto = { git = "https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git", branch="veracruz", optional = true }
sgx_types = { git = "https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git", branch="veracruz", optional = true }
sgx_alloc = { git = "https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git", branch="veracruz", optional = true }


