[package]
authors = ["The Veracruz Development Team"]
description = "WASM execution engine for the trusted Veracruz runtime"
edition = "2018"
name = "execution-engine"
version = "0.3.0"

[features]
default = []
icecap = [
  "platform-services/icecap",
  "policy-utils/icecap",
]
nitro = [
  "mbedtls/monitor_getrandom",
  "platform-services/nitro",
  "policy-utils/std",
  "wasmtime",
]
std = [
  "nix",
  "platform-services/std",
  "policy-utils/std",
  "wasmtime",
]

[dependencies]
log = "0.4.13"
anyhow = "1"
byteorder = "1.4.3"
cfg-if = "1"
# ctor is not used by this crate, but we must prevent other crates from
# picking up a newer version of this crate which does not work with IceCap:
ctor = "=0.1.16"
err-derive = "0.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
mbedtls = { path = "../third-party/rust-mbedtls/mbedtls" }
nix = { version = "0.20.2", optional = true }
num = { version = "0.4", default-features = false }
num-derive = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
postcard = { version = "1.0.0", features = [ "alloc", "use-std" ] }
platform-services = { path = "../platform-services" }
policy-utils = { path = "../policy-utils" }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
typetag = "=0.1.6"
wasi-types = { path = "../third-party/wasi-types" }
wasmi = { path = "../third-party/wasmi" }
wasmtime = { version = "3.0.1", optional = true }

[lib]
name = "execution_engine"
path = "./src/lib.rs"
