[package]
name = "icecap-veracruz-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = { version = "1.2.1", default-features = false }
env_logger = { version = "0.9.0" }
err-derive = "0.2"
lazy_static = "1.4"
log = "0.4.13"
policy-utils = { path = "../policy-utils" }
proxy-attestation-client = { git = "https://github.com/veracruz-project/proxy-attestation-client", tag = "v0.2" }
signal-hook = { version = "0.3.13" }
structopt = { version = "0.3", features = ["wrap_help"] }
tempfile = { version = "3.2.0" }
veracruz-server = { path = "../veracruz-server", features = ["icecap"] }
veracruz-utils = { path = "../veracruz-utils", features = ["icecap"] }