[package]
authors = ["The Veracruz Development Team"]
description = "Common IO-related code used by multiple Veracruz components."
edition = "2018"
name = "io-utils"
version = "0.3.0"

[features]
icecap = ["serde/derive", "base64/std"]
linux = ["bincode", "byteorder", "base64/std"]
nitro = ["serde_json/std", "base64/std", "nix", "byteorder"]

[dependencies]
anyhow = "1"
base64 = { version = "0.13.0", default-features = false, optional = true }
bincode = { version = "1.2.1", default-features = false, optional = true }
byteorder = { version = "1.4.3", optional = true }
err-derive = "0.2"
log = "0.4.13"
nix = { version = "0.20.2", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
regex = "1.5.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, optional = true }
stringreader = "0.1"
transport-protocol = { path = "../transport-protocol" }
[dependencies.uuid]
version = "1.1.2"
features = [
    "serde",                # for serialization
]
