[package]
name = "linux-runtime-manager"
version = "0.3.0"
edition = "2018"

[dependencies]
anyhow = "1"
clap = { version = "2.33" }
env_logger = { version = "0.9.0" }
hex = { version = "0.4.2" }
io-utils = { path = "../io-utils" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.13"
nix = "0.20.2"
psa-attestation = { path = "../psa-attestation" }
raw-fd = { git = "https://github.com/veracruz-project/nitro-enclave", tag = "v0.1" }
runtime-manager = { path = "../runtime-manager", features = ["linux"] }
veracruz-utils = { path = "../veracruz-utils", features = ["linux"] }
