[package]
name = "linux-veracruz-server"
version = "0.3.0"
edition = "2018"

[dependencies]
anyhow = "1"
data-encoding = { version = "2.3.2" }
env_logger = { version = "0.10.0" }
io-utils = { path = "../io-utils", features = ["linux"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.13"
nix = { version = "0.20.2" }
policy-utils = { path = "../policy-utils", features = ["std", ] }
proxy-attestation-client = { git = "https://github.com/veracruz-project/proxy-attestation-client", tag = "v0.2" }
rand = "0.8.3"
structopt = { version = "0.3", features = ["wrap_help"] }
tempfile = { version = "3.2.0" }
veracruz-server = { path = "../veracruz-server", features = ["linux"]}
veracruz-utils = { path = "../veracruz-utils", features = ["linux"] }
