[package]
name = "nitro-root-enclave-server"
version = "0.1.0"
authors = ["dermil01"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veracruz-utils = { path = "../veracruz-utils", features = ["nitro"]}
nix = "0.19"
hex = "0.4"
bincode = { git= "https://github.com/veracruz-project/bincode.git", branch= "veracruz", default-features=false }
err-derive = "0.2"
base64 = "0.10.1"
colima = { path = "../colima"}
stringreader = "0.1"
curl = "0.4"
clap = "2.33"