[package]
name = "nitro-root-enclave-server"
version = "0.1.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = "The untrusted (non-secure world) socket server for the Veracruz root enclave for AWS Nitro enclaves"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veracruz-utils = { path = "../veracruz-utils", features = ["nitro"]}
nix = "0.19"
hex = "=0.4.2"
bincode = { git= "https://github.com/veracruz-project/bincode.git", branch= "veracruz", default-features=false }
err-derive = "0.2"
base64 = "0.10.1"
transport-protocol = { path = "../transport-protocol"}
stringreader = "0.1"
curl = "=0.4.35"
clap = "2.33"
bitflags = "=1.2.1"
local_ipaddress = "0.1.3"

