[package]
name = "nitro_runtime_manager"
authors = ["The Veracruz Development Team"]
description = "The trusted Veracruz runtime's command-and-control module for AWS Nitro Enclaves. Co-ordinates and directs the rest of the runtime"
edition = "2018"
version = "0.3.0"

[dependencies]
anyhow = "1"
log = "0.4.13"
nix = { version = "0.20.2" }
nsm_api = { package = "aws-nitro-enclaves-nsm-api", version = "0.2.1" }
raw-fd = { git = "https://github.com/veracruz-project/nitro-enclave", tag = "v0.1" }
runtime-manager = { path = "../runtime-manager", features = ["nitro"] }
veracruz-utils = { path = "../veracruz-utils", features = ["nitro"] }
serde_bytes = "0.11"
