[package]
authors = ["The Veracruz Development Team"]
description = "An abstraction layer for various isolation technologies.  Exposes a uniform interface to the various Veracruz libraries for accessing hardware/TEE-specific functionality that differs between isolation technology."
edition = "2018"
name = "platform-services"
version = "0.3.0"

[features]
default = []
icecap = []
nitro = ["nix", "nsm_api", "nsm_lib"]
std = ["getrandom", "nix"]

[lib]
name = "platform_services"
path = "./src/lib.rs"

[dependencies]
cfg-if = "1"
getrandom = { version = "0.1.14", optional = true }
nix = { version = "0.22", optional = true }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package = "aws-nitro-enclaves-nsm-api", optional = true }
nsm_lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package = "nsm-lib", optional = true }
