[package]
authors = ["The Veracruz Development Team"]
description = "An abstraction layer for various isolation technologies.  Exposes a uniform interface to the various Veracruz libraries for accessing hardware/TEE-specific functionality that differs between isolation technology."
edition = "2018"
name = "platform-services"
version = "0.3.0"

[features]
default = []
icecap = []
nitro = ["nix", "nsm_api", "nsm_lib"]
std = ["getrandom", "nix"]

[dependencies]
getrandom = { version = "0.2", optional = true }
nix = { version = "0.20.2", optional = true }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", tag = "v0.2.0", package = "aws-nitro-enclaves-nsm-api", optional = true }
nsm_lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", tag = "v0.2.0", package = "nsm-lib", optional = true }
