[package]
authors = ["The Veracruz Development Team"]
description = "An abstraction layer for various isolation technologies.  Exposes a uniform interface to the various Veracruz libraries for accessing hardware/TEE-specific functionality that differs between isolation technology."
edition = "2018"
name = "platform-services"
version = "0.3.0"

[features]
default = []
nitro = ["nix", "nsm_api"]
std = ["getrandom", "nix"]

[dependencies]
getrandom = { version = "0.2", optional = true }
nix = { version = "0.20.2", optional = true }
nsm_api = { package = "aws-nitro-enclaves-nsm-api", version = "0.2.1", optional = true }
