[package]
authors = ["The Veracruz Development Team"]
description = "Miscellaneous code related to the Veracruz policy."
edition = "2018"
name = "policy-utils"
version = "0.3.0"

[features]
icecap = []
std = [
  "hex/std",
  "rustls",
  "serde/std",
  "serde_json/std",
  "x509-parser",
]

[dependencies]
err-derive = { version = "0.2", default-features = false }
hex = { version = "0.4.2" }
lexical-core = { version = "0.8.2", default-features = false }
rustls = { version = "0.20.4", optional = true }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
veracruz-utils = { path = "../veracruz-utils" }
wasi-types = { path = "../third-party/wasi-types" }
x509-parser = { version = "0.13.0", optional = true }
