[package]
authors = ["The Veracruz Development Team"]
description = "Miscellaneous code related to the Veracruz policy."
edition = "2018"
name = "policy-utils"
version = "0.3.0"

[features]
icecap = []
nitro = [
# FIXME: fake_random is not secure! (Also, does this run in the enclave?)
  "mbedtls/fake_random",
]
std = [
  "hex/std",
  "serde/std",
  "serde_json/std",
]

[dependencies]
anyhow = "1"
err-derive = { version = "0.2", default-features = false }
hex = { version = "0.4.2" }
lexical-core = { version = "0.8.2", default-features = false }
mbedtls = { path = "../third-party/rust-mbedtls/mbedtls" }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
veracruz-utils = { path = "../veracruz-utils" }
wasi-types = { path = "../third-party/wasi-types" }
