[package]
authors = ["The Veracruz Development Team"]
description = "Miscellaneous code related to the Veracruz policy."
edition = "2018"
name = "policy-utils"
version = "0.3.0"

[features]
nitro = [
  "mbedtls/monitor_getrandom",
  "veracruz-utils/nitro",
]
std = [
  "hex/std",
  "serde/std",
  "serde_json/std",
  "veracruz-utils/std",
]

[dependencies]
anyhow = "1"
err-derive = { version = "0.2", default-features = false }
hex = { version = "0.4.2" }
lalrpop-util = { version = "0.19.12", features = ["lexer"] }
lexical-core = { version = "0.8.2", default-features = false }
mbedtls = { path = "../third-party/rust-mbedtls/mbedtls", default-features = false, features = ["std", "aesni", "padlock", "tls13"] }
regex = "1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
veracruz-utils = { path = "../veracruz-utils", optional = true }
wasi-types = { path = "../third-party/wasi-types" }

[build-dependencies]
lalrpop = { version = "0.19.12", features = ["lexer"] }
